--- a/docs/_static/css/dark.css
+++ b/docs/_static/css/dark.css
@@ -628,8 +628,7 @@ code.docutils.literal.notranslate {
 
 /* Link to Remix IDE shown over code snippets */
 
-a.remix-link,
-a.remix-link:not(:visited) {
+.remix-link-container a.remix-link {
     color: black;
 }
 
